<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <Button android:layout_width="wrap_content" android:layout_gravity="right" android:id="@+id/logoutId" android:height="20dip" android:layout_height="50dip" android:text="@string/logoutBtn"></Button>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="10dip" android:id="@+id/Margin1"></RelativeLayout>
     <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical" android:id="@+id/FriendIDLayout">
        <TextView android:layout_alignParentTop="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/FriendsId" android:text="@string/FriendsLabel" android:layout_marginLeft="20dip" android:layout_marginTop="12dip"></TextView>
        <EditText android:layout_alignParentTop="true" android:layout_width="wrap_content" android:layout_marginLeft="100dip" android:width="250dip" android:id="@+id/FriendsTxtId" android:layout_height="50dip" android:text="@string/FriendField" android:editable="false"></EditText>
    </RelativeLayout>
    <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/FriendButtonLayout" android:gravity="left">
    </RelativeLayout>
    <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical" android:id="@+id/LatLayout">
        <TextView android:layout_alignParentTop="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="20dip" android:layout_marginTop="12dip" android:text="@string/LatLabel" android:id="@+id/LatId"></TextView>
        <EditText android:layout_alignParentTop="true" android:layout_width="wrap_content" android:layout_marginLeft="100dip" android:width="250dip" android:layout_height="50dip" android:id="@+id/LatTxtId" android:text="@string/LatField" android:editable="false"></EditText>
    </RelativeLayout>
    <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical" android:id="@+id/LonLayout">
        <TextView android:layout_alignParentTop="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="20dip" android:layout_marginTop="12dip" android:id="@+id/LonId" android:text="@string/LonLabel"></TextView>
        <EditText android:layout_alignParentTop="true" android:layout_width="wrap_content" android:layout_marginLeft="100dip" android:width="250dip" android:layout_height="50dip" android:id="@+id/LonTxtId" android:text="@string/LonField" android:editable="false"></EditText>
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="10dip" android:id="@+id/margin3"></RelativeLayout>
    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/closeBtnLayout" android:layout_width="fill_parent" android:gravity="center_horizontal">
        <Button android:layout_alignParentTop="true" android:layout_width="wrap_content" android:layout_height="50dip" android:id="@+id/CloseId" android:text="@string/closeBtn"></Button>
    </RelativeLayout>
</LinearLayout>
